--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,7 @@
 API_KEY="AIzaSyDD3JQQh71f40cbm2zbXnLjYsU6psNLMDU"
+AUTH_DOMAIN="footleague-565ef.firebaseapp.com"
+DATABASE_URL="https://footleague-565ef.firebaseio.com"
+PROJECT_ID="footleague-565ef"
+STORAGE_BUCKET="footleague-565ef.appspot.com"
+MESSAGING_SENDER_ID="851400288945"
+APP_ID="1:851400288945:web:d4c0c2c372423bdef71090"
